<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/changetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstbutton"/>
    
    <TextView 
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firsttextview"
       />
    <Button 
        android:id="@+id/startservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startservice"/>
    <Button 
        android:id="@+id/stopservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopservice"/>
    <Button 
        android:id="@+id/bindservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bindservice"/>
    <Button 
        android:id="@+id/unbindservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbindservice"/>
     <Button 
        android:id="@+id/threadservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/threadservice"/>
    <Button 
        android:id="@+id/intentservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intentservice"/>
    

</LinearLayout>
